--- a/.github/workflows/WakaTime.yml
+++ b/.github/workflows/WakaTime.yml
@@ -10,7 +10,7 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: chencn2020/myProject@master
+      - uses: chencn2020/myProject@main
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
