--- a/.github/workflows/WakaTime.yml
+++ b/.github/workflows/WakaTime.yml
@@ -1,9 +1,9 @@
-name: myProject Readme
+name: Waka Readme
 
 on:
   schedule:
     # Runs at 12am IST
-    - cron: "0 0 * * *"
+    - cron: '30 18 * * *'
   workflow_dispatch:
 jobs:
   update-readme:
